# pdf2epub-medical

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: _memory_worker.py  benchmark_memory.py
src/pdf2epub/: cli.py  deps.py  epub.py  errors.py  extract.py  images.py  models.py  ocr.py  outline.py  pipeline.py  tables.py
src/pdf2epub/web/: app.py
src/pdf2epub/web/static/: index.html
tests/: fixtures.py  test_epub_e2e.py  test_extract.py  test_images.py  test_ocr.py  test_outline.py  test_pipeline_parallel.py  test_tables.py  test_web_app.py
