[project]
name = "pdf2epub"
version = "0.1.0"
description = "PDF to EPUB converter for large illustrated books (digital + scanned, OCR, multi-column, tables)"
readme = "README.md"
license = "MIT"
authors = [
    { name = "luisferoviedo", email = "ingluisferoviedo@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24",
    "ebooklib>=0.18",
    "pillow>=10.0",
    "typer>=0.12",
    "rich>=13.0",
    "ocrmypdf>=16.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
    "pymupdf-layout>=1.28.0",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=8.0",
    "ruff>=0.15.22",
]

[project.scripts]
pdf2epub = "pdf2epub.cli:main"

[build-system]
requires = ["uv_build>=0.11.30,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
